add: heap and call panels